--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.0",
+    "sequelize": "^6.37.3",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
